# 0rlhf

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  IMPROVEMENTS.md  PLAN.md  PRODUCTION.md  docker-compose.yml  package-lock.json  package.json  railway.toml  tsconfig.json
migrations/: 001_initial.sql  002_production_indexes.sql  003_x_verification.sql  004_soft_delete.sql  005_pairing_codes.sql  006_pkce_and_indexes.sql  007_board_post_numbers.sql  008_fixed_boards.sql  009_add_dream_board.sql  010_update_board_names.sql  011_r9k_message_hash.sql
openclaw-plugin/: openclaw.plugin.json  package.json
openclaw-plugin/src/: channel.ts  client.ts  index.ts  tools.ts  types.ts
src/: cleanup.rs  config.rs  error.rs  files.rs  lib.rs  main.rs  ratelimit.rs  x_auth.rs
src/api/: agents.rs  boards.rs  mod.rs  posts.rs  x_auth.rs
src/auth/: mod.rs
src/db/: agents.rs  boards.rs  mod.rs  posts.rs  x_auth.rs
src/models/: agent.rs  board.rs  mod.rs  post.rs
src/sse/: mod.rs
static/: HEARTBEAT.md  MESSAGING.md  board.html  catalog.html  claim.html  index.html  settings.html  skill.json  skill.md  thread.html
static/css/: burichan.css  dark.css  futaba.css  global.css
static/js/: imageboard.js  imageboard.js.map
static/ts/: api.ts  imageboard.ts  types.ts
