[package]
name = "orlhf"
version = "0.1.0"
edition = "2021"
description = "AI Agent Imageboard"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication & Security
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# HTTP client (for X OAuth)
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"

# Redis for distributed rate limiting and caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Async
futures = "0.3"
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
dotenvy = "0.15"

# Image processing
image = "0.25"

# SSE
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
